# chin-tools

./: Cargo.toml
crates/actor-sqlite/: Cargo.toml
crates/actor-sqlite/src/: client.rs  lib.rs  model.rs  pool.rs  pool_config.rs  worker.rs
crates/actor-sqlite/tests/: tests.rs
crates/chin-sql/: Cargo.toml
crates/chin-sql-derive/: Cargo.toml
crates/chin-sql-derive/src/: lib.rs
crates/chin-sql-derive/src/tablecreatesql/: fieldhandler.rs  mod.rs
crates/chin-sql-derive/tests/: createsql.rs
crates/chin-sql/chin-sql/: Cargo.toml
crates/chin-sql/chin-sql-derive/: Cargo.toml
crates/chin-sql/chin-sql-derive/src/: lib.rs  sql_crud.rs  sqlinserter.rs
crates/chin-sql/chin-sql-derive/src/table_schema/: fieldhandler.rs  mod.rs
crates/chin-sql/chin-sql-derive/src/tablecreatesql/: fieldhandler.rs  mod.rs
crates/chin-sql/chin-sql-derive/tests/: createsql.rs
crates/chin-sql/chin-sql-inner/: Cargo.toml
crates/chin-sql/chin-sql-inner/src/: create_table.rs  db_type.rs  lib.rs  place_hoder.rs  sql_builder.rs  sql_deleter.rs  sql_inserter.rs  sql_updater.rs  tablefield.rs  wheres.rs
crates/chin-sql/chin-sql-inner/src/sql_value/: mod.rs  postgres.rs  str_type.rs  time_type.rs
crates/chin-sql/chin-sql-inner/src/sql_value/sqlite/: mod.rs  sqltype.rs
crates/chin-sql/src/: lib.rs  place_hoder.rs  sql_builder.rs  sql_deleter.rs  sql_inserter.rs  sql_reader.rs  sql_updater.rs  sql_value.rs  wheres.rs  wrappers.rs
crates/chin-sql/src/sql_value/: mod.rs  postgres.rs  sqlite.rs
crates/chin-sql/src/sql_value/sqlite/: mod.rs  sqltype.rs
crates/chin-sql/tests/: createsql.rs
crates/chin-terminal-utils/: Cargo.toml
crates/chin-tools/: Cargo.toml
crates/chin-tools-base/: Cargo.toml
crates/chin-tools-base/src/: lib.rs  shared_str.rs
crates/chin-tools-types/: Cargo.toml
crates/chin-tools-types/src/: anyhow.rs  db_type.rs  lib.rs  shared_str.rs  time_type.rs
crates/chin-tools/src/: lib.rs
crates/chin-tools/src/marcos/: log.rs
crates/chin-tools/src/utils/: cmd_util.rs  mod.rs  path_util.rs  sort_util.rs
crates/chin-tools/src/wayland/: mod.rs
crates/chin-tools/src/wayland/niri/: event_stream.rs  mod.rs  model.rs
crates/chin-tools/src/wrapper/: anyhow.rs  mod.rs  score.rs
crates/chin-wayland-utils/: Cargo.toml
crates/chin-wayland-utils/src/: lib.rs
crates/chin-wayland-utils/src/wayland/: mod.rs
crates/chin-wayland-utils/src/wayland/niri/: event_stream.rs  mod.rs  model.rs
src/: lib.rs
src/marcos/: log.rs
src/sql/: mod.rs  place_hoder.rs  sql_builder.rs  sql_updater.rs  sql_value.rs  wheres.rs
src/utils/: file_util.rs  fileutils.rs  id_util.rs  mod.rs  pathutils.rs  string_util.rs  stringutils.rs  termutils.rs
src/wayland/: mod.rs
src/wayland/niri/: event_stream.rs  mod.rs
src/wrapper/: anyhow.rs  mod.rs  shared_str.rs
