[workspace]
members = [
    "crates/chin-sql",
    "crates/chin-tools-types",
    "crates/chin-tools",
    "crates/chin-sql-derive",
    "crates/chin-wayland-utils",
    "crates/chin-terminal-utils" 
, "crates/actor-sqlite"]
resolver = "3"

[workspace.dependencies]
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.35.0" }
