[package]
name = "chin-sql"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
thiserror = "2.0.12"
chrono = "0.4.40"

chin-tools-types = { path = "../chin-tools-types" }
chin-sql-derive = { path = "../chin-sql-derive" }

postgres-types = { version = "0.2.9", features = [
    "with-chrono-0_4",
], optional = true }
rusqlite = { version = "^0.33.0", optional = true }

bytes = "1.0"

log = { workspace = true }


[features]
postgres = ["postgres-types"]
sqlite = ["rusqlite"]
default = ["postgres", "sqlite"]
