[package]
name = "chin-tools-types"
version = "0.1.0"
edition = "2024"

[dependencies]
smol_str = { version = "0.3.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
chrono = "0.4.41"

postgres-types = { version = "0.2.9", features = [
    "with-chrono-0_4",
], optional = true }

[features]
default = ["db"]
db = ["postgres-types"]