[package]
name = "chin-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.15.1"

# Logging info
log = { workspace = true }
serde = { workspace = true }

chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.13.0", features = ["serde", "v4"] }

# Serde Related Crates

strum = { version = "0.26", features = ["derive"] }

# Tokio Related Crates
futures = { version = "0.3.30", optional = true }
tokio = { version = "1.43.0", features = ["fs", "io-util"], optional = true }
tokio-util = { version = "0.7.10", features = ["io"], optional = true }
bytes = "1.6.0"
chin-tools-types = { path = "../chin-tools-types" }

[features]
default = []
ftokio = ["tokio", "tokio-util", "futures"]
