[package]
name = "chin-sql-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
chin-sql = { path = "../chin-sql-inner", package = "chin-sql-inner" }
proc-macro2 = "1.0.95"

[dev-dependencies]
chrono = "*"
